--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,11 +10,13 @@
 <h1><%= kindOfDay %></h1>
 <ul>
   <!-- <li>add book</li> -->
-<% for(var i=0; i <newListItems.length; i++) %>
-<li>
-  
+<% for(var i=0; i <newListItems.length; i++) { %>
+
+<li> 
   <%= newListItems[i] %>
 </li>
+<% } %>
+
 </ul>
 <form action="/" method="post">
 
